--- a/components/ImageSlideShow/Image.module.css
+++ b/components/ImageSlideShow/Image.module.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     background-color: black;
-    padding-top: 3rem;
+    padding-top: 2rem;
     cursor: pointer;
     overflow-x: scroll;
     white-space: nowrap;
